# midi-rae

./: .gitignore  README.md  core.html  core.html.md  data.html  data.html.md  index.html  index.html.md  losses.html  losses.html.md  main_chat.ipynb  preencode.html  preencode.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml  swin.html  swin.html.md  toy_factorization.html  toy_factorization.html.md  train_dec.html  train_dec.html.md  train_enc.html  train_enc.html.md  utils.html  utils.html.md  vit.html  vit.html.md
11_toy_factorization_files/figure-commonmark/: 3d8a2688-1-124b998e-5461-41d1-89d5-8cea3302a3b7  3d8a2688-2-49c3d9c3-70b2-41a8-a333-b2871e6481c7
11_toy_factorization_files/figure-html/: 3d8a2688-3-94f70fc1-e70e-454a-a41b-ff4e7158a2a5
configs/: config.yaml  config_imagenette.yaml  config_swin.yaml
midi_rae/: _modidx.py  core.py  data.py  losses.py  preencode.py  swin.py  train_dec.py  train_enc.py  utils.py  vit.py  viz.py
nbs/: 00_core.ipynb  01_data.ipynb  02_vit.ipynb  02_vit_dup1.ipynb  03_losses.ipynb  04_utils.ipynb  05_viz.ipynb  06_train_enc.ipynb  07_inspect.ipynb  07_preencode.ipynb  08_preencode.ipynb  09_inspect.ipynb  09_train_dec.ipynb  10_swin.ipynb  10_swin_dev_chat.ipynb  11_toy_factorization.ipynb  index.ipynb  nbdev.yml  toy_factorization.ipynb
